samples/_failures_safe/1761362679_1ca869_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36b56e4d.c: In function ‘main’:
./samples/SAFE/__tmp_36b56e4d.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
